testsuite/tests/patsyn/should_compile/T11959.hs
{-# LANGUAGE PatternSynonyms #-}
{-# LANGUAGE ExplicitNamespaces #-}
module Main where

import T11959Lib (Vec2(..), data (:>))

main = return ()
