testsuite/tests/patsyn/should_fail/import-syntax-no-ext.hs
{-# LANGUAGE NoPatternSynonyms #-}
module Foo where

import ImportSyntax (A(.., B))
